fix overflow and use accurate margins

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #efffc8;
   min-height: 100vh;
@@ -22,15 +11,18 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #3B341F;
+
+  padding: 1em;
+  overflow-x: hidden;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-header * {
+  margin: 0;
+}
+
+p {
+  margin: 1em 0!important;
 }
 
 .metronome {
@@ -39,7 +31,6 @@
 
 button {
   font-size: calc(10px + 2vmin);
-  /* margin-bottom: 1em; */
   border: none;
   border-radius: 3px;
   background-color: cornflowerblue;
